write index.html page

--- a/html5-css3-1/index.html
+++ b/html5-css3-1/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
+        <!-- Meta tag describes page content and helps search engine to know what your web page is all about-->
+        <!-- Required meta tags -->
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <meta name="viewport" content="initial-scale = 1, maximum-scale = 1, user-scalable = no, width = device-width">
+        <meta name="author" content="dunky 2022">
+        <meta name="description" content="dunky 2022 web programming">
+        <meta name="keywords" content="tutorial, html, web programming">
+        <title>dunky 2022 full stack Java developer</title>
+        <link rel="icon" href="img/icon.png">
 
-</head>
-<body>
+    </head>
+    
+    <body>
 
-</body>
+    </body>
 
 
 </html>
