Add audio control to the page

--- a/html5-css3-1/index.html
+++ b/html5-css3-1/index.html
@@ -82,11 +82,11 @@
         <p> Nissan GTR <progress value="97" min="0" max="100"></progress></p>
 
         <audio autoplay control loop preload="metadata">
-            <source src="aduio/audio.m4a" type="autio/mp4">
-            <source src="adutio/audio.mp3" type="autio/mp4">
-            <source src="audio/audio.ogg" type="autio/mp4">
+            <source src="audio/audio.m4a" type="audio/mp4">
+            <source src="audio/audio.mp3" type="audio/mp4">
+            <source src="audio/audio.ogg" type="audio/mp4">
         </audio>
-        
+
         <footer>This is a footer.</footer>
     </body>
 </html>
