--- a/html5-css3-1/index.html
+++ b/html5-css3-1/index.html
@@ -81,11 +81,17 @@
         <p> BMW <progress value="45" min="0" max="100" ></progress></p>
         <p> Nissan GTR <progress value="97" min="0" max="100"></progress></p>
 
-        <audio autoplay control loop preload="metadata">
+        <audio autoplay control loop preload="auto">
             <source src="audio/audio.m4a" type="audio/mp4">
             <source src="audio/audio.mp3" type="audio/mp4">
             <source src="audio/audio.ogg" type="audio/mp4">
         </audio>
+
+        <video autoplay control loop width="500" height="20 0">
+            <source src="video/video.mp4" type="video/mp4">
+            <source src="video/video.ogv" type="video/ogg">
+            <source src="video/video.webm" type="video/mp4">
+        </video>
 
         <footer>This is a footer.</footer>
     </body>
