--- a/html5-css3-1/wireframe.html
+++ b/html5-css3-1/wireframe.html
@@ -24,7 +24,7 @@
 
 <header>
 
-    <div id="logo"></div>
+    <div id="logo">Logo</div>
 
     <div id="icon1" class="social"></div>
     <div id="icon2" class="social"></div>
