Add custom CSS3 style sheet from Wireframe design

--- a/html5-css3-1/wireframe.html
+++ b/html5-css3-1/wireframe.html
@@ -85,7 +85,16 @@
 
 <section>
 
-    <aside id="left"></aside>
+    <aside id="left">
+        <ul>
+        
+            <li>Link 1</li>
+            <li>Link 2</li>
+            <li>Link 3</li>
+            <li>Link 4</li>
+        
+        </ul>
+    </aside>
 
     <article>
         <h1>Lorem Ipsum</h1>
