Introduction to responsive design

--- a/html5-css3-1/wireframe.html
+++ b/html5-css3-1/wireframe.html
@@ -6,7 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="initial-scale = 1, maximum-scale = 1, user-scalable = no, width = device-width">
+    <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width">
     <meta name="author" content="dunky 2022">
     <meta name="description" content="dunky 2022 web programming">
     <meta name="keywords" content="tutorial, html, web programming">
@@ -15,11 +15,13 @@
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
 
     <!-- Styling css-->
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css" media="">
 
 </head>
 
 <body>
+
+<div id="chat">Chat</div>
     
 <!-- Starts header -->
 
@@ -40,11 +42,11 @@
 
     <ul>
 
-        <li class="buttons">Button 1</li>
-        <li class="buttons">Button 2</li>
-        <li class="buttons">Button 3</li>
-        <li class="buttons">Button 4</li>
-        <li class="buttons">Button 5</li>
+        <a href="#"><li class="buttons">Button 1</li></a>
+        <a href="#"><li class="buttons">Button 2</li></a>
+        <a href="#"><li class="buttons">Button 3</li></a>
+        <a href="#"><li class="buttons">Button 4</li></a>
+        <a href="#"><li class="buttons">Button 5</li></a>
 
     </ul>
 
