Add media query to transform the page to responsive

--- a/html5-css3-responsive-1/columns-with-queries.html
+++ b/html5-css3-responsive-1/columns-with-queries.html
@@ -7,14 +7,15 @@
 
 	<title>Document</title>
 
-	<link rel="stylesheet" href="css/columnas-con-consultas.css">
+	   <!-- Styling css-->
+    <link rel="stylesheet" type="text/css" href="css/columns-with-queries.css" media="">
 
 </head>
 <body>
 
-<div class="contenedor">
+<div class="container">
 	
-	<div class="fila">
+	<div class="row">
 		
 		<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">Logo</div>
 		<div class="col-lg-6 col-md-5 col-sm-9 col-xs-12">
