--- a/html5-css3-1/index.html
+++ b/html5-css3-1/index.html
@@ -148,14 +148,14 @@
 
     <article class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <h1>Lorem Ipsum</h1>
-        <p><img src="img/pic.jpg" width="250">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+        <p><img src="img/pic.jpg" width="250"><big>Lorem Ipsum is</big> <small>simply dummy text of the printing and typesetting industry.</small> Simply dummy text of the printing and typesetting industry. 
         Lorem Ipsum has been the industry's standard
         dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
         book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially
         unchanged.</p>
         <br>
-        <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature
-        from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, 
+        <p><mark>Contrary</mark> to <del>popular belief</del>, Lorem Ipsum is not <u>simply random text</u>. It has roots in a piece of <strong>classical Latin literature
+        from 45 BC, making it over 2000 years old.</strong> Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, 
         looked up one of the more obscure Latin
         words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature,
         discovered the undoubtable source.</p>
