Add alt to images

--- a/html5-css3-1/index.html
+++ b/html5-css3-1/index.html
@@ -98,7 +98,7 @@
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 
         <center>
-        <img src="img/img01.jpg" width="100">
+        <img src="img/img01.jpg" width="100" alt="Green nature">
         <h1>Lorem Ipsum</h1>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </center>
@@ -108,7 +108,7 @@
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 
         <center>
-            <img src="img/img02.jpg" width="100">
+            <img src="img/img02.jpg" width="100" alt="Blue nature">
             <h1>Lorem Ipsum</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </center>
@@ -118,7 +118,7 @@
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 
         <center>
-        <img src="img/img03.jpg" width="100">
+        <img src="img/img03.jpg" width="100" alt="Red nature">
         <h1>Lorem Ipsum</h1>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </center>
@@ -148,17 +148,17 @@
 
     <article class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <h1>Lorem Ipsum</h1>
-        <p><img src="img/pic.jpg" width="250"><big>Lorem Ipsum is</big> <small>simply dummy text of the printing and typesetting industry.</small> Simply dummy text of the printing and typesetting industry. 
+        <p><img src="img/pic.jpg" width="250" alt="mountainous landscape"><big>Lorem Ipsum is</big> <small>simply dummy text of the printing and typesetting industry.</small> Simply dummy text of the printing and typesetting industry. 
         Lorem Ipsum has been the industry's standard
         dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
         book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially
         unchanged.</p>
         <br>
-        <p><mark>Contrary</mark> to <del>popular belief</del>, Lorem Ipsum is not <u>simply random text</u>. It has roots in a piece of <strong>classical Latin literature
+        <p><mark>Contrary</mark> to <strike>popular belief</strike>, Lorem Ipsum is not <u>simply random text</u>. It has roots in a piece of <strong>classical Latin literature
         from 45 BC, making it over 2000 years old.</strong> Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, 
         looked up one of the more obscure Latin
-        words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature,
-        discovered the undoubtable source.</p>
+        words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in <q>classical literature</q>,
+        discovered the undoubtable source. 2<sup>8</sup>.</p>
     </article>
 
     <aside id="right" class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
