ECMAScript manipulating Array data

--- a/ECMAScript/index.html
+++ b/ECMAScript/index.html
@@ -20,7 +20,7 @@
         
       <h1><u>Learn ECMAScript</u></h1>
       <p>In this example we are exploring how to use JavaScript. </p>
-      
+      <p onclick="callThisAwesomeFunc()"> Display This Awesome Func.</p>
       <noscript>
         <p>Oops! This website requires a JavaScript-enabled browser.</p>
       </noscript > 
