ECMAScript HTML DOM

--- a/ECMAScript/index.html
+++ b/ECMAScript/index.html
@@ -12,15 +12,19 @@
         <title>dunky 2022 full stack Java developer</title>
         <link rel="icon" href="img/icon.png">
 
-        <script type="text/javascript" src="js/custom.js"></script>
-
     </head>
     
     <body>
         
       <h1><u>Learn ECMAScript</u></h1>
       <p>In this example we are exploring how to use JavaScript. </p>
-      <p onclick="callThisAwesomeFunc()"> Display This Awesome Func.</p>
+      <p onclick="callThisAwesomeFunc()"> Display this awesome Func.</p>
+      <div id="HelloWorld">
+        <br><br>
+        <p>Hello World of Java Script.</p>
+      </div>
+
+      <script type="text/javascript" src="js/custom.js"></script>
       <noscript>
         <p>Oops! This website requires a JavaScript-enabled browser.</p>
       </noscript > 
