ECMAScript classes and variables

--- a/ECMAScript/index.html
+++ b/ECMAScript/index.html
@@ -11,6 +11,7 @@
         <meta name="keywords" content="tutorial, html, web programming">
         <title>dunky 2022 full stack Java developer</title>
         <link rel="icon" href="img/icon.png">
+        <script type="text/javascript" src="js/custom-class.js"></script>
 
     </head>
     
@@ -24,7 +25,7 @@
         <p>Hello World of Java Script.</p>
       </div>
 
-      <script type="text/javascript" src="js/custom.js"></script>
+      <!--<script type="text/javascript" src="js/custom.js"></script> -->
       <noscript>
         <p>Oops! This website requires a JavaScript-enabled browser.</p>
       </noscript > 
