--- a/css3-designs/index.html
+++ b/css3-designs/index.html
@@ -21,115 +21,56 @@
 
 <body>
 
-<div class="container">
-
-<div id="chat">Chat</div>
-    
 <!-- Starts header -->
 
-<header class="row">
-
-<div id="logo" class="col-lg-2 col-md-2 col-sm-3 col-xs-12">Kaligsty</div>
-
-<div class="col-lg-8 col-md-8 col-sm-6 col-xs-0"></div>
-
-<div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
-
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-
-        <center id="icon1">
-            <p>X</p>
-        </center>
-
-    </div>
-
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-
-        <center id="icon2">
-            <p>X</p>
-        </center>
-
-    </div>
-
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-
-        <center id="icon3">
-            <p>X</p>
-        </center>
-
-    </div>
-
-</div>
+<header>
+<h1>Welcome to my website</h1>
 </header>
 
 <!-- Ends header -->
 
 <!--=====================================
-	SECTION 2
+	SECTION 1
 	======================================-->
 
 <!-- Starts Navigation Bar-->
-<nav class="row">
+<nav >
 
-    <ul>
-
-        <li class="col-lg-2 col-md-2 col-sm-6 col-xs-12"><a href="#">Button 1</a></li>
-        <li class="col-lg-2 col-md-2 col-sm-6 col-xs-12"><a href="#">Button 2</a></li>
-        <li class="col-lg-2 col-md-2 col-sm-6 col-xs-12"><a href="#">Button 3</a></li>
-        <li class="col-lg-2 col-md-2 col-sm-6 col-xs-12"><a href="#">Button 4</a></li>
-        <li class="col-lg-2 col-md-2 col-sm-6 col-xs-12"><a href="#">Button 5</a></li>
-        <li class="col-lg-2 col-md-2 col-sm-6 col-xs-12"><a href="#">Button 6</a></li>
-
-    </ul>
+       <a href="index.html">Home</a>
+       <a href="portfolio.html">Portfolio</a>
+       <a href="about.html">About</a>
+       <a href="contact.html">Contact</a>
+       <a href="https://www.facebook.com" target="_blank"> Social account</a>
 
 </nav>
 
 <!-- Ends Navigation Bar-->
 
 <!--=====================================
-	SECTION 3
+	SECTION 1
 	======================================-->
 
 <!-- Starts Top part -->
 
 
-<section id="section3" class="row">
+<section >
 
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+        <p id="top">Did you know there is </p>
+        <a href="#coolstuff"> cool stuff</a>
+        <p>below, hope you are <span>enjoying</span> the course.</p>
 
-        <center>
-        <img src="img/img01.jpg" width="100" alt="Green nature">
-        <h1>Lorem Ipsum</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        </center>
+        <p>Look at some of these tags.</p>
 
-    </div>
+        <h2 id="coolstuff">This content is way down here.</h2>
+        <p>Way down at the bottom <a href="#top"> go back up.</a></p>
 
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-
-        <center>
-            <img src="img/img02.jpg" width="100" alt="Blue nature">
-            <h1>Lorem Ipsum</h1>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        </center>
-
-    </div>
-
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-
-        <center>
-        <img src="img/img03.jpg" width="100" alt="Red nature">
-        <h1>Lorem Ipsum</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-        </center>
-
-    </div>
-
+        <img src="img/cats.png" width="100" alt="Cat picture" height="150px">
+     
 </section>
 
 <!-- Ends Top part -->
  <!--=====================================
-    	SECTION 4
+    	SECTION 3
 ======================================-->
 <!-- Starts Section -->
 
@@ -190,9 +131,9 @@
 	SECTION 5
 	======================================-->
 
-<footer class="row">
+<footer >
 
-    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">&copy; dunkygeoffrey39@gmail.com, all rights reserved.</div>
+ &copy; dunkygeoffrey39@gmail.com, all rights reserved.
 
 </footer>
 <!-- Ends Footer -->
