CSS3 advanced designs

--- a/css3-designs/index.html
+++ b/css3-designs/index.html
@@ -21,70 +21,85 @@
 
 <body>
 
-<!-- Starts header -->
+    <div class="container">
 
-<header id="header">
-<h1>Welcome to my website</h1>
-</header>
+        <!-- Starts header -->
 
-<!-- Ends header -->
+        <header id="header">
+            <h1>Welcome to my website</h1>
+        </header>
 
-<!--=====================================
-	SECTION 1
-	======================================-->
+        <!-- Ends header -->
 
-<!-- Starts Navigation Bar-->
-<nav class="blue">
+        <!--=====================================
+            SECTION 1
+            ======================================-->
 
-       <a href="index.html">Home</a>
-       <a href="portfolio.html">Portfolio</a>
-       <a href="about.html">About</a>
-       <a href="contact.html">Contact</a>
-       <a href="https://www.facebook.com" target="_blank"> Social account</a>
+        <!-- Starts Navigation Bar-->
+        <nav class="blue">
 
-</nav>
+            <a href="index.html">Home</a> |
+            <a href="portfolio.html">Portfolio</a> |
+            <a href="about.html">About</a> |
+            <a href="contact.html">Contact</a> |
+            <a href="https://www.facebook.com" target="_blank"> Social account</a>
 
-<!-- Ends Navigation Bar-->
+        </nav>
 
-<!--=====================================
-	SECTION 2
-	======================================-->
+        <!-- Ends Navigation Bar-->
 
-<!-- Starts section part -->
+        <!--=====================================
+            SECTION 2
+            ======================================-->
 
-
-<section >
-
-        <p id="top">Did you know there is 
-            <a href="#coolstuff"> cool stuff</a> below.
-            Hope you are <span>enjoying</span> the course.
-        </p>
-
-        <div>Look at some of these tags.</div>
-
-        <h2 id="coolstuff">This content is way down here.</h2>
-        <p>Way down at the <span class="highlight green">bottom</span> <a href="#top"> go back up.</a></p>
-
-        <img src="img/pic.jpg" width="250" alt="mountainous landscape">
-     
-</section>
+        <!-- Starts section part -->
 
 
-<!-- Ends Section -->
+        <section >
 
-<!-- Starts Footer -->
+            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The
+            passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De
+            Finibus Bonorum et Malorum for use in a type specimen book.</p>
 
-<!--=====================================
-	SECTION 3
-	======================================-->
+            <p>The purpose of lorem ipsum is to create a natural looking block of text (sentence, paragraph, page, etc.) that doesn't
+            distract from the layout. A practice not without controversy, laying out pages with meaningless filler text can be very
+            useful when the focus is meant to be on design, not content.</p>
 
-<footer >
+            <p>The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and
+            again during the 90s as desktop publishers bundled the text with their software. Today it's seen all around the web; on
+            templates, websites, and stock designs. Use our generator to get your own, or read on for the authoritative history of
+            lorem ipsum.</p>
 
- &copy; dunkygeoffrey39@gmail.com, all rights reserved.
+                <p id="top">Did you know there is 
+                    <a href="#coolstuff"> cool stuff</a> below.
+                    Hope you are <span>enjoying</span> the course.
+                </p>
 
-</footer>
-<!-- Ends Footer -->
-</div>
+                <div>Look at some of these tags.</div>
+
+                <h2 id="coolstuff">This content is way down here.</h2>
+                <p>Way down at the <span class="highlight green">bottom</span> <a href="#top"> go back up.</a></p>
+
+                <img src="img/pic.jpg" width="250" alt="mountainous landscape">
+            
+        </section>
+
+
+        <!-- Ends Section -->
+
+        <!-- Starts Footer -->
+
+        <!--=====================================
+            SECTION 3
+            ======================================-->
+
+        <footer >
+
+            &copy; dunkygeoffrey39@gmail.com, all rights reserved.
+
+        </footer>
+        <!-- Ends Footer -->
+    </div>
 
 </body>
 
