--- a/css3-designs/index.html
+++ b/css3-designs/index.html
@@ -57,30 +57,30 @@
 
         <section >
 
-            <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The
+            <p class="lheight">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The
             passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De
             Finibus Bonorum et Malorum for use in a type specimen book.</p>
 
-            <p>The purpose of lorem ipsum is to create a natural looking block of text (sentence, paragraph, page, etc.) that doesn't
+            <p class="lheight">The purpose of lorem ipsum is to create a natural looking block of text (sentence, paragraph, page, etc.) that doesn't
             distract from the layout. A practice not without controversy, laying out pages with meaningless filler text can be very
             useful when the focus is meant to be on design, not content.</p>
 
-            <p>The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and
+            <p class="lheight">The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and
             again during the 90s as desktop publishers bundled the text with their software. Today it's seen all around the web; on
             templates, websites, and stock designs. Use our generator to get your own, or read on for the authoritative history of
             lorem ipsum.</p>
 
-                <p id="top">Did you know there is 
-                    <a href="#coolstuff"> cool stuff</a> below.
-                    Hope you are <span>enjoying</span> the course.
-                </p>
+            <p id="top">Did you know there is 
+            <a href="#coolstuff"> cool stuff</a> below.
+                Hope you are <span>enjoying</span> the course.
+            </p>
 
-                <div>Look at some of these tags.</div>
+            <div>Look at some of these tags.</div>
 
-                <h2 id="coolstuff">This content is way down here.</h2>
-                <p>Way down at the <span class="highlight green">bottom</span> <a href="#top"> go back up.</a></p>
+            <h2 id="coolstuff">This content is way down here.</h2>
+            <p>Way down at the <span class="highlight green">bottom</span> <a href="#top"> go back up.</a></p>
 
-                <img src="img/pic.jpg" width="250" alt="mountainous landscape">
+            <img src="img/pic.jpg" width="250" alt="mountainous landscape">
             
         </section>
 
