CSS3 advanced designs

--- a/css3-designs/index.html
+++ b/css3-designs/index.html
@@ -84,6 +84,34 @@
             
         </section>
 
+        <table>
+            <tr>
+                <th colspan="7">
+                    <h3>Hours of operations</h3>
+                </th>
+            </tr>
+            <tr>
+                <th >Monday</th>
+                <th >Tuesday</th>
+                <th >Wednesday</th>
+                <th >Thursday</th>
+                <th >Friday</th>
+                <th >Saturday</th>
+                <th >Sunday</th>
+            </tr>
+
+            <tr>
+                <td >9am - 5pm</td>
+                <td >9am - 5pm</td>
+                <td >9am - 5pm</td>
+                <td >9am - 5pm</td>
+                <td >9am - 5pm</td>
+                <td >Closed</td>
+                <td >Closed</td>
+            </tr>
+
+        </table>
+
 
         <!-- Ends Section -->
 
