CSS3 advanced designs

--- a/css3-designs/index.html
+++ b/css3-designs/index.html
@@ -106,8 +106,12 @@
                 <td >9am - 5pm</td>
                 <td >9am - 5pm</td>
                 <td >9am - 5pm</td>
-                <td >Closed</td>
-                <td >Closed</td>
+                <td colspan="2">Closed</td>
+               
+            </tr>
+
+            <tr>
+                <td colspan="7">*Closed on holidays</td>
             </tr>
 
         </table>
