CSS3 advanced designs

--- a/css3-designs/index.html
+++ b/css3-designs/index.html
@@ -111,7 +111,8 @@
             </tr>
 
             <tr>
-                <td colspan="7">*Closed on holidays</td>
+                <td colspan="7" id="lowercol">
+                    *Closed on holidays</td>
             </tr>
 
         </table>
