CSS3 advanced designs

--- a/css3-designs/index.html
+++ b/css3-designs/index.html
@@ -86,8 +86,8 @@
 
         <table>
             <tr>
-                <th colspan="7">
-                    <h3>Hours of operations</h3>
+                <th colspan="7" id="uppercol">
+                    <h3>Hours of operation</h3>
                 </th>
             </tr>
             <tr>
