CSS3 advanced designs

--- a/css3-designs/index.html
+++ b/css3-designs/index.html
@@ -38,11 +38,11 @@
         <!-- Starts Navigation Bar-->
         <nav class="blue">
 
-            <a href="index.html">Home</a> |
-            <a href="portfolio.html">Portfolio</a> |
-            <a href="about.html">About</a> |
-            <a href="contact.html">Contact</a> |
-            <a href="https://www.facebook.com" target="_blank"> Social account</a>
+            <div><a href="index.html">Home</a></div>
+            <div><a href="portfolio.html">Portfolio</a></div>
+            <div><a href="about.html">About</a></div>
+            <div><a href="contact.html">Contact</a></div>
+            <div><a href="https://www.facebook.com" target="_blank"> Social account</a></div>
 
         </nav>
 
