Using CSS to build webpage layouts

--- a/css3-webpage-layout/index.html
+++ b/css3-webpage-layout/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="dunky 2022">
     <meta name="description" content="Using CSS to build webpage layout">
     <meta name="keywords" content="tutorial, html, web programming">
-    <title>dunky 2022 full stack Java developer</title>
+    <title>2022 full stack Java developer - Using CSS to build webpage layout</title>
     <link rel="icon" href="img/icon.png">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
 
@@ -22,22 +22,15 @@
 <body>
 
     <div class="container">
-
      
         <!--=====================================
-            SECTION 1
+            Demonstrating Float with boxes.
             ======================================-->
 
         <!-- Starts Navigation Bar-->
-        <nav class="blue">
+        <div class="box1"></div>
 
-            <div><a href="index.html">Home</a></div>
-            <div><a href="portfolio.html">Portfolio</a></div>
-            <div><a href="about.html">About</a></div>
-            <div><a href="contact.html">Contact</a></div>
-            <div><a href="https://www.facebook.com" target="_blank"> Social account</a></div>
-
-        </nav>
+        <div class="box2"> </div>
 
 
 </body>
