Using CSS to build webpage layouts

--- a/css3-webpage-layout/index.html
+++ b/css3-webpage-layout/index.html
@@ -29,7 +29,8 @@
 
         <!-- Floating div-->
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. A mene tu? Egone non intellego, quid sit don Graece, Latine
-            voluptas? Duo Reges: constructio interrete. <img class="myImg" src="img/image1.jpg" width="350" height="150 "alt="City street"> 
+            voluptas? Duo Reges: constructio interrete. 
+            <span class="thumbnail"><img class="myImg" src="img/image1.jpg" width="350" height="150 "alt="City street"> </span>
             Mihi vero, inquit, placet agi subtilius et, ut ipse dixisti, pressius.
         </p>
         
@@ -44,7 +45,9 @@
             omni virtuti vitium contrario nomine opponitur. Longum est enim ad omnia respondere, quae a te dicta sunt. Paulum,
             cum regem Persem captum adduceret, eodem flumine invectio? </p>
         
-        <p>Tria genera cupiditatum, <img class="myImg" src="img/image2.jpg" width="350"  height="150" alt="mountainous landscape">naturales et necessariae, naturales et non necessariae, nec naturales nec necessariae. Facit
+        <p>Tria genera cupiditatum, 
+            <span class="thumbnail"><img class="myImg" src="img/image2.jpg" width="350"  height="150" alt="mountainous landscape"></span>
+            naturales et necessariae, naturales et non necessariae, nec naturales nec necessariae. Facit
             enim ille duo seiuncta ultima bonorum, quae ut essent vera, coniungi debuerunt; Summus dolor plures dies manere non
             potest? Haec bene dicuntur, nec ego repugno, sed inter sese ipsa pugnant. Claudii libidini, qui tum erat summo ne
             imperio, dederetur. Ergo ita: non posse honeste vivi, nisi honeste vivatur? Quem ad modum quis ambulet, sedeat, qui
