Setting up a two columns layout of a web page.

--- a/CSS-create-a-website/index.html
+++ b/CSS-create-a-website/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1.0, user-scalable = no, width = device-width">
     <meta name="author" content="dunky 2022">
     <meta name="description" content="Using CSS to build webpage layout">
-    <meta name="keywords" content="tutorial, html, web programming">
+    <meta name="keywords" content="tutorial, html, CSS, web programming">
     <title>2022 full stack Java developer - Using CSS to build a two page layout</title>
     <link rel="icon" href="img/icon.png">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
@@ -23,7 +23,7 @@
     <!-- Starts header -->
     <div class="header-container">
         <header>
-            <h1>Our company: 2022</h1>
+            <h1>Full stack Java developer: 2022</h1>
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -65,7 +65,7 @@
     <!-- Starts Footer -->
     
     <!--=====================================
-                SECTION 3
+                SECTION 2
     ======================================-->
     <div class="footer-container"></div>
     <!-- Ends Footer -->
