Setting up a two columns layout of a web page.

--- a/CSS-create-a-website/index.html
+++ b/CSS-create-a-website/index.html
@@ -25,14 +25,15 @@
         <div class="header-container">
             <header>
                 <h1>Full stack Java developer: 2022</h1>
-                <nav>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </nav>
+                
             </header>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
         </div>
         <!-- Ends header -->
 
@@ -59,6 +60,7 @@
                     <li><a href="#">Link 4</a></li>
                 </ul>
             </aside>
+            <div class="clearfix"></div>
         </div>
         <!-- Ends main Section -->
 
@@ -68,7 +70,7 @@
         <!--=====================================
                     SECTION 2
         ======================================-->
-        <div class="footer-container">
+        <div class="footer-container clearfix">
             <footer>
                 <div>&copy; Copyright 2022 dunkygeoffrey39@gmail.com</div>
                 <div>More info to get a hold of us</div>
