--- a/CSS-create-a-website/index.html
+++ b/CSS-create-a-website/index.html
@@ -44,7 +44,7 @@
         <div class="main-container">
 
             <div id="content">
-                <header>Main page content</header>
+                <header><h1>Main page content</h1></header>
                 <p>Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The
                 passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De
                 Finibus Bonorum et Malorum for use in a type specimen book.</p>
