--- a/CSS-create-a-website/index.html
+++ b/CSS-create-a-website/index.html
@@ -16,6 +16,8 @@
 
     <!-- Styling css-->
     <link rel="stylesheet" type="text/css" href="css/style.css" media="">
+    <!-- Java Script-->
+    <script type="text/javascript" src="js/custom.js"></script>
 
 </head>
 
