JavaScript, do more on your webpage.

--- a/CSS-create-a-website/index.html
+++ b/CSS-create-a-website/index.html
@@ -96,6 +96,10 @@
 
     </div>
 
+    <noscript>
+        <p>Oops! This website requires a JavaScript-enabled browser.</p>
+    </noscript>
+
 </body>
 
 </html>
