JavaScript, do more on your webpage.

--- a/CSS-create-a-website/index.html
+++ b/CSS-create-a-website/index.html
@@ -17,7 +17,7 @@
     <!-- Styling css-->
     <link rel="stylesheet" type="text/css" href="css/style.css" media="">
     <!-- Java Script-->
-    <script type="text/javascript" src="js/custom.js"></script>
+    <script type="text/javascript" src="js/domjs.js"></script>
 
 </head>
 
@@ -64,6 +64,13 @@
                     templates, websites, and stock designs. Use our generator to get your own, or read on for the authoritative history
                     of
                     lorem ipsum.</p>
+                <h3>What is the DOM???</h3>
+                <ul>
+                    <li>Describes how all HTML elements are related.</li>
+                    <li>Allows JavaScript to call into the DOM and select elements and influence elements.</li>
+                    <li>DOM is created when the webpage loads.</li>
+                    <li>Elements within the page can be accessed and changed.</li>
+                </ul>
                 <footer>Share on social media</footer>
             </div>
 
@@ -95,7 +102,6 @@
         <!-- Ends Footer -->
 
     </div>
-
     <noscript>
         <p>Oops! This website requires a JavaScript-enabled browser.</p>
     </noscript>
