Creating main index page

--- a/a-single-page-website/index.html
+++ b/a-single-page-website/index.html
@@ -27,7 +27,12 @@
         <div>
             <nav>
                 <ul>
-                    <li></li>
+                    <li href="section1" calss="active">Section 1</li>
+                    <li href="section2" >Section 2</li>
+                    <li href="section3" >Section 3</li>
+                    <li href="section4" >Section 4</li>
+                    <li href="section5" >Section 5</li>
+                    <li href="section6" >Section 6</li>
                 </ul>
             </nav>
         </div>
