Add text using blind text generator

--- a/a-single-page-website/index.html
+++ b/a-single-page-website/index.html
@@ -22,24 +22,24 @@
 </head>
 
 <body>
-    <div class="container">
+ 
         <!-- Starts header -->
-        <header>
-            <div>
-                <nav id="nav">
-                    <ul>
-                        <li> <a href="#section1" class="active">Section 1</a> </li>
-                        <li> <a href="#section2" >Section 2 </a></li>
-                        <li> <a href="#section3" >Section 3 </a></li>
-                        <li> <a href="#section4" >Section 4 </a></li>
-                        <li> <a href="#section5" >Section 5 </a></li>
-                        <li> <a href="#section6" >Section 6 </a></li>
+    <header id="master-header">
+        <div>
+            <nav id="nav">
+                <ul>
+                    <li> <a href="#section1" class="active">Section 1</a> </li>
+                    <li> <a href="#section2" >Section 2 </a></li>
+                    <li> <a href="#section3" >Section 3 </a></li>
+                    <li> <a href="#section4" >Section 4 </a></li>
+                    <li> <a href="#section5" >Section 5 </a></li>
+                    <li> <a href="#section6" >Section 6 </a></li>
                     </ul>
-                </nav>
-            </div>
-        </header>
+            </nav>
+        </div>
+    </header>
         <!-- Ends header -->
-
+    <div class="container">
         <!--=====================================
             SECTIONS
         ======================================-->
