Add CSS3 styling

--- a/a-single-page-website/index.html
+++ b/a-single-page-website/index.html
@@ -176,9 +176,17 @@
             SECTION 3
         ======================================-->
             
-        <footer>
+        <footer id="footer">
             <div>
-
+                <div class="col-1">&copy; dunkygeoffrey39@gmail.com, all rights reserved.<p>Contact us for more info.</p></div>
+                <div class="col-2">
+                    <ul>
+                        <li>Contact us</li>
+                        <li>Facebook</li>
+                        <li>Twitter</li>
+                        <li>Linkedin</li>
+                    </ul>
+                </div>
             </div>
         </footer> 
         <!-- Ends Footer -->
