Add active class js for scroll position

--- a/a-single-page-website/index.html
+++ b/a-single-page-website/index.html
@@ -17,7 +17,7 @@
     <!-- Styling css-->
     <link rel="stylesheet" type="text/css" href="css/style.css" media="">
     <!-- Java Script-->
-    <script type="text/javascript" src="js/customjs.js"></script>
+ 
 
 </head>
 
@@ -194,6 +194,7 @@
         <noscript>
             <p>Oops! This website requires a JavaScript-enabled browser.</p>
         </noscript>
+        <script type="text/javascript" src="js/custom.js"></script>
     </div>
 
 </body>
