--- a/learn-CSS3-from-scratch/index.html
+++ b/learn-CSS3-from-scratch/index.html
@@ -20,9 +20,15 @@
 </head>
 
 <body>
-
-
+    <div class="bluebox">
+        <p>Facebook</p>
+    </div>
+    <div class="yellowbox">
+        <p>Apple</p>
+    </div>
+    <div class="greenbox">
+        <p>Microsoft</p>
+    </div>
 
 </body>
-
 </html>
