--- a/final-math-website/index.html
+++ b/final-math-website/index.html
@@ -23,9 +23,14 @@
     <div id="container">
         <div id="header">
             <div id="brand">
-                <h1><a href="#">Maths the Fun Way</a></h1>
+                <h1><a href="#">Maths the Fun Way.</a></h1>
             </div>
-
+            <div id="searchBox">
+                <form method="get">
+                    <input type="text" class="text">
+                    <input type="submit" value="Search a topic" class="submit">
+                </form>
+            </div>
         </div>
         
     </div>
