--- a/final-math-website/index.html
+++ b/final-math-website/index.html
@@ -44,7 +44,7 @@
 
         <div id="menu">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">Online Tutorials</a></li>
                 <li><a href="#">Get a private tutor</a></li>
                 <li><a href="#">Sign up</a></li>
