Building a Math's Tutorial website - section

--- a/final-math-website/index.html
+++ b/final-math-website/index.html
@@ -68,6 +68,31 @@
         </div>
 
         <!-- Ends Section -->
+        <div id="leftsidebar" class="sidebar">
+            <h3>Go to:</h3>
+            <ul>
+                <li><a href="#"> Year 1 free lesson.</a></li>
+                <li><a href="#"> Year 2 free lesson.</a></li>
+                <li><a href="#"> Year 3 free lesson.</a></li>
+                <li><a href="#"> Year 4 free lesson.</a></li>
+                <li><a href="#"> Year 5 free lesson.</a></li>
+                <li><a href="#"> Year 6 free lesson.</a></li>
+                <li><a href="#"> Year 7 free lesson.</a></li>
+            </ul>
+
+        </div>
+        <div id="rightsidebar" class="sidebar">
+            <h3>Why us?</h3>
+            <ul>
+                <li><a href="#">Our teachers are available any time.</a></li>
+                <li><a href="#">Available on laptops, tables and phones.</a></li>
+                <li><a href="#">80 days money back quarantee.</a></li>
+                <li><a href="#">Interactive games for an enjoyable learning experience.</a></li>
+                <li><a href="#">Learn at your own page.</a></li>
+                <li><a href="#">Complete curriculum.</a></li>
+            </ul>
+
+        </div>
         
         <!-- Starts Footer -->
         
