--- a/TypeScript/index.html
+++ b/TypeScript/index.html
@@ -11,7 +11,7 @@
         <meta name="keywords" content="tutorial, html, JavaScript.">
         <title>dunky 2022 full stack Java developer</title>
         <link rel="icon" href="img/icon.png">
-		<script type="text/javascript" src="js/object.js"></script>
+		<script type="text/javascript" src="js/custom.js"></script>
                
     </head>
     
