--- a/js-fundamental-2/index.html
+++ b/js-fundamental-2/index.html
@@ -13,12 +13,31 @@
   <title>dunky 2024 JavaScript</title>
   <link rel="icon" href="img/icon.png">
 
+  <style>
+    body {
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      background: linear-gradient(to top left, #28b487, #7dd56f);
+    }
+
+    h1 {
+      font-family: sans-serif;
+      font-size: 50px;
+      line-height: 1.3;
+      width: 100%;
+      padding: 30px;
+      text-align: center;
+      color: white;
+    }
+  </style>
+
 </head>
 
 <body>
 
-  <h1><u>Mastering JS Fundamental-1</u></h1>
-  <p>In this example we are exploring how to use JavaScript. </p>
+  <h1><u>Mastering JS Fundamental-2</u></h1>
+  <p>We will learn Functions, Objects, Arrays and Loops. </p>
 
 
   <script type="text/javascript" src="js/custom.js"></script>
