--- a/js-fundamental-2/index.html
+++ b/js-fundamental-2/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="viewport" content="initial-scale = 1, maximum-scale = 1, user-scalable = no, width = device-width">
   <meta name="author" content="dunky 2024">
-  <meta name="description" content="dunky 2022 web programming">
+  <meta name="description" content="dunky 2024 web programming">
   <meta name="keywords" content="tutorial, html, web programming">
   <title>dunky 2024 JavaScript</title>
   <link rel="icon" href="img/icon.png">
@@ -36,8 +36,8 @@
 
 <body>
 
-  <h1><u>Mastering JS Fundamental-2</u></h1>
-  <p>We will learn Functions, Objects, Arrays and Loops. </p>
+  <h1><u>Mastering Advanced JavaScript-2</u></h1>
+  <p>We will learn Functions, Objects, Arrays and Loops.</p>
 
 
   <script type="text/javascript" src="js/custom.js"></script>
