--- a/js-fundamental-2/index.html
+++ b/js-fundamental-2/index.html
@@ -1,51 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <!-- Meta tag describes page content and helps search engine to know what your web page is all about-->
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta
+      name="viewport"
+      content="initial-scale = 1, maximum-scale = 1, user-scalable = no, width = device-width"
+    />
+    <meta name="author" content="dunky 2024" />
+    <meta name="description" content="dunky 2024 web programming" />
+    <meta name="keywords" content="tutorial, html, web programming" />
+    <title>dunky 2024 JavaScript</title>
+    <link rel="icon" href="img/icon.png" />
 
-<head>
-  <!-- Meta tag describes page content and helps search engine to know what your web page is all about-->
-  <!-- Required meta tags -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="viewport" content="initial-scale = 1, maximum-scale = 1, user-scalable = no, width = device-width">
-  <meta name="author" content="dunky 2024">
-  <meta name="description" content="dunky 2024 web programming">
-  <meta name="keywords" content="tutorial, html, web programming">
-  <title>dunky 2024 JavaScript</title>
-  <link rel="icon" href="img/icon.png">
+    <style>
+      body {
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        background: linear-gradient(to top left, #28b487, #7dd56f);
+      }
 
-  <style>
-    body {
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      background: linear-gradient(to top left, #28b487, #7dd56f);
-    }
+      h1 {
+        font-family: sans-serif;
+        font-size: 50px;
+        line-height: 1.3;
+        width: 100%;
+        padding: 30px;
+        text-align: center;
+        color: white;
+      }
+    </style>
+  </head>
 
-    h1 {
-      font-family: sans-serif;
-      font-size: 50px;
-      line-height: 1.3;
-      width: 100%;
-      padding: 30px;
-      text-align: center;
-      color: white;
-    }
-  </style>
+  <body>
+    <h1><u>Mastering Advanced JavaScript-2</u></h1>
+    <p>We will learn Functions, Objects, Arrays and Loops.</p>
 
-</head>
+    <script type="text/javascript" src="js/custom.js"></script>
 
-<body>
-
-  <h1><u>Mastering Advanced JavaScript-2</u></h1>
-  <p>We will learn Functions, Objects, Arrays and Loops.</p>
-
-
-  <script type="text/javascript" src="js/custom.js"></script>
-
-  <noscript>
-    <p>Oops! This website requires a JavaScript-enabled browser.</p>
-  </noscript>
-
-</body>
-
+    <noscript>
+      <p>Oops! This website requires a JavaScript-enabled browser.</p>
+    </noscript>
+  </body>
 </html>
